--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/protien pancakes.html">Protien Pancakes</a>
+    <ul>
+        <li><a href="recipes/protien pancakes.html">Protien Pancakes</a></li>
+        <li><a href="recipes/maggi.html">Maggi</a></li>
+        <li><a href="recipes/DesiChai">Desi Chai</a></li>
+    </ul>
 </body>
 </html>
