Fix broken DesiChai page link
Omited the .html part in the DesiChai anchor tag. Now fixed.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/protien pancakes.html">Protien Pancakes</a></li>
         <li><a href="recipes/maggi.html">Maggi</a></li>
-        <li><a href="recipes/DesiChai">Desi Chai</a></li>
+        <li><a href="recipes/DesiChai.html">Desi Chai</a></li>
     </ul>
 </body>
 </html>
