--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/protien pancakes.html">Protien Pancakes</a></li>
-        <li><a href="recipes/maggi.html">Maggi</a></li>
-        <li><a href="recipes/DesiChai.html">Desi Chai</a></li>
-    </ul>
+    <p>
+        <ul>
+            <li><a href="recipes/protien pancakes.html">Protien Pancakes</a></li>
+            <li><a href="recipes/maggi.html">Maggi</a></li>
+            <li><a href="recipes/DesiChai.html">Desi Chai</a></li>
+        </ul>
+    </p>
 </body>
 </html>
